# hi-source-dependency

./: .gitignore  ChangeLog.md  README.md  default.nix  liba.cabal  release.nix
libb/: default.nix  libb.cabal  release.nix  shell.nix
libb/src/: LibB.hs
src/: LibA.hs
