name:                libb
version:             0.1.0.0
homepage:            [TBC]
license:             BSD3
license-file:        LICENSE
author:              Dmitry Malikov
maintainer:          malikov.d.y@gmail.com
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     LibB
  build-depends:       base >=4.11 && <4.12, liba
  hs-source-dirs:      src
  default-language:    Haskell2010
